@@ -24,11 +24,11 @@ address = 0x69
 
 # The frame rate the camera is run at.
 # GridEYEs can only run at 1 or 10 FPS.
-# Melexis cameras (MLX90640 and MLX90641) can run at 1, 2, 4, 8, 16, 32, or 64
-# FPS, but higher frame rates require that the I2C bus is configured to run at a
-# higher clock speed. The MLX90641 can go up to 64 FPS on a 400kHz clock speed,
-# but the MLX90640 requires a 1.2MHz I2C clock to be able to go above 16 FPS (or
-# 32 FPS using interlaced mode. See the `mode` setting below).
+# Melexis cameras (MLX90640 and MLX90641) can run at 0.5, 1, 2, 4, 8, 16, 32, or
+# 64 FPS, but higher frame rates require that the I2C bus is configured to run
+# at a higher clock speed. The MLX90641 can go up to 64 FPS on a 400kHz clock
+# speed, but the MLX90640 requires a 1.2MHz I2C clock to be able to go above 16
+# FPS (or 32 FPS using interlaced mode. See the `mode` setting below).
 # Higher frame rates generally have more noise, but there's less lag before
 # detecting a person. Conversely, lower frame rates have less noise, but more
 # lag.
